--- a/client/app/styles/burgerMenu.module.scss
+++ b/client/app/styles/burgerMenu.module.scss
@@ -2,11 +2,19 @@
     position: absolute;
     width: 7vw;
     top: 0.3%;
-    left: 0.3%;
+    left: 2%;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media (max-aspect-ratio: 1/1.3) {
+    width: 12vw;
+        
+    }
+    @media (min-aspect-ratio: 567/349) {
+    width: 13vh;
+
+    }
 }
 
 .menuButton {
@@ -21,7 +29,7 @@
     justify-content: center;
     align-items: center;
     aspect-ratio: 1 / 1;
-    background: no-repeat center url('/assets/burgerMenu/burger-button.png');
+    background: no-repeat center url("/assets/burgerMenu/burger-button.png");
     background-size: contain;
     background-origin: content-box;
     image-rendering: pixelated;
@@ -65,17 +73,17 @@
 }
 
 .homeLink {
-    background-image: url('/assets/burgerMenu/burger-home.png');
+    background-image: url("/assets/burgerMenu/burger-home.png");
 }
 
 .searchLink {
-    background-image: url('/assets/burgerMenu/burger-search.png');
+    background-image: url("/assets/burgerMenu/burger-search.png");
 }
 
 .borderLink {
-    background-image: url('/assets/burgerMenu/burger-borders.png');
+    background-image: url("/assets/burgerMenu/burger-borders.png");
 }
 
 .adminLink {
-    background-image: url('/assets/burgerMenu/burger-admin.png');
+    background-image: url("/assets/burgerMenu/burger-admin.png");
 }
