--- a/client/app/styles/tablet.module.scss
+++ b/client/app/styles/tablet.module.scss
@@ -12,7 +12,7 @@
 
     height: 100%;
     aspect-ratio: 1 / 1;
-    background: no-repeat center url("/assets/backgrounds/main-tablet.png");
+    background: no-repeat center url("/assets/tablet/main_tablet.png");
     background-size: contain;
     background-origin: content-box;
     image-rendering: pixelated;
@@ -23,56 +23,86 @@
         left: 0;
         width: 100%;
         height: 100%;
-        padding-bottom:10%;
-        padding-top:2%;
+        padding-bottom: 10%;
+        padding-top: 1%;
         padding-left: 1%;
         padding-right: 1%;
         box-sizing: border-box;
         overflow: hidden;
-        .tabletControls{
+        .tabletControls {
             display: flex;
-            justify-items: center;
-            align-self: flex-end;
-            height: 15%;
-            padding-top: 2%;
-            padding-bottom: 2%;
-            .tabButton{
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 2.5vw;
-                width: 2.5em;
-                height: 1em;
-                border: 3px solid black;
+            height: 5vw;
+            justify-content: center;
+            padding-top: 0%;
+            padding-bottom: 0%;
+            padding-left: 10%;
+            @media (max-aspect-ratio: 1/1.3) {
+                height: 9%;
             }
-            .buffer{
-                width: 17%;
+            @media (min-aspect-ratio: 567/349) {
+                height: 9%;
             }
-            
-            
-            
         }
-        .listWrapper{
-            font-size: 1.5vw;
+        .listWrapper {
+            font-size: 2vw;
             padding-top: 2%;
-            height: 100%;
+            height: 90%;
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap:0.5%;
-            
-            .planetBar {
-                height: 17%;
-                width: 90%;
-                border: 3px solid black;
-            }
-            .legionBar {
-                height: 17%;
-                width: 90%;
-                border: 3px solid black;
+            gap: 2%;
+            overflow-y: auto;
+            scroll-behavior: smooth;
+            color: rgb(196, 234, 84);
 
+            &::-webkit-scrollbar {
+                display: none; /* для Chrome, Safari и Opera */
+            }
+
+            .planetBar {
+                aspect-ratio: 573/110;
+                height: 22%;
+                padding: 3%;
+                gap: -1%;
+                padding-left: 7%;
+                padding-top: 0.5%;
+                box-sizing: border-box;
+                // border: 3px solid black;
+                background: center no-repeat url("/assets/tablet/planetbar.png");
+                background-size: contain;
+                transition: transform 0.2s ease;
+                &:hover {
+                    transform: scale(1.05);
+                }
+                .name {
+                    font-size: 2.8vw;
+                }
+                .id,
+                .position {
+                    transform: translate(0, -50%);
+                    padding-left: 2%;
+
+                    height: auto;
+                }
+                @media (min-aspect-ratio: 567/349) {
+                    .name {
+                        font-size: 4.5vh;
+                    }
+                    .position,
+                    .id {
+                        font-size: 3.5vh;
+                    }
+                }
+                @media (max-aspect-ratio: 1/1.3) {
+                    .name {
+                        font-size: 4vw;
+                    }
+                    .position,
+                    .id {
+                        font-size: 3vw;
+                    }
+                }
             }
         }
     }
 }
-
