--- a/client/app/styles/burgerMenu.module.scss
+++ b/client/app/styles/burgerMenu.module.scss
@@ -1,5 +1,5 @@
 .menuContainer {
-    position: absolute;
+    // position: absolute;
     width: 7vw;
     top: 0.3%;
     left: 2%;
@@ -24,7 +24,7 @@
     border: none;
     padding: 0%;
     margin: 0%;
-    z-index: 200;
+    z-index: 7;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,7 +55,7 @@
     align-items: center;
     transform: translateY(-100%);
     transition: transform 0.3s ease;
-    z-index: 100;
+    z-index: 4;
     overflow: hidden;
 }
 
