--- a/client/app/styles/planet.module.scss
+++ b/client/app/styles/planet.module.scss
@@ -38,7 +38,7 @@
         align-items: center;
         transition: all 0.2s ease;
         pointer-events: none;
-        opacity: 0;
+        // opacity: 0;
         word-wrap: break-word;
         background-origin: border-box;
         background-repeat: no-repeat;
@@ -47,8 +47,7 @@
         transform: translate(0, 20%);
         will-change: transform;
 
-        width: 100%;
-        height: 28%;
+        
     }
     .wrapper {
         display: flex;
@@ -62,24 +61,17 @@
 
         justify-content: space-between;
     }
-
+    
     .one {
+        width: 120%;
+        aspect-ratio: 5;
         background-image: url("/assets/labels/name_planet.png");
     }
 
     .two {
+        width: 120%;
+        aspect-ratio: 3.7;
         background-image: url("/assets/labels/label_planet_double.png");
     }
 }
-#textWraper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0;
-    line-height: 0.5;
-}
-#text {
 
-    margin: 0;
-    padding: 0;
-}
