--- a/client/app/styles/scrolable.module.scss
+++ b/client/app/styles/scrolable.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 90%;
+    width: 80%;
     height: 62%;
     overflow-y: auto;
     margin-bottom: 10%;
@@ -20,9 +20,9 @@
     margin-top: 1%;
 }
 
+.planet,
 .description,
 .event {
-    width: 90%;
     margin-bottom: 0%;
     margin-top: 3%;
     word-wrap: break-word;
