--- a/client/app/styles/tablet.module.scss
+++ b/client/app/styles/tablet.module.scss
@@ -32,10 +32,10 @@
         .tabletControls {
             display: flex;
             height: 5vw;
-            justify-content: center;
+            justify-content: space-around;
             padding-top: 0%;
             padding-bottom: 0%;
-            padding-left: 10%;
+            padding-left: 15%;
             @media (max-aspect-ratio: 1/1.3) {
                 height: 9%;
             }
@@ -63,9 +63,9 @@
                 aspect-ratio: 573/110;
                 height: 22%;
                 padding: 3%;
-                gap: -1%;
-                padding-left: 7%;
-                padding-top: 0.5%;
+                // gap: -1%;
+                // padding-left: 7%;
+                // padding-top: 0.5%;
                 box-sizing: border-box;
                 // border: 3px solid black;
                 background: center no-repeat url("/assets/tablet/planetbar.png");
@@ -75,14 +75,17 @@
                     transform: scale(1.05);
                 }
                 .name {
-                    font-size: 2.8vw;
+                    font-size: 3vw;
+                    display: flex;
+                    justify-content: center;
+                    margin: 0; 
+                    padding: 0;
+                    height: 50%;
                 }
-                .id,
+                
                 .position {
-                    transform: translate(0, -50%);
-                    padding-left: 2%;
-
-                    height: auto;
+                    // margin: 1%;
+                    // height: auto;
                 }
                 @media (min-aspect-ratio: 567/349) {
                     .name {
