--- a/client/app/styles/upperInfo.module.scss
+++ b/client/app/styles/upperInfo.module.scss
@@ -1,6 +1,7 @@
 .upperInfo {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     margin: 4%;
     width: 64%;
     height: 27%;
@@ -16,42 +17,50 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
         .name {
             margin: 0;
             font-size: 2.2vw;
             height: 80%;
         }
+
         .nameLegion {
             margin: 0;
             font-size: 2.2vw;
         }
+
         .ingamePosition {
             margin: 0;
             font-size: 1.4vw;
             transform: translateY(-10%);
         }
+
         .ingamePositionLegion {
             margin: 0;
             font-size: 1.4vw;
             transform: translateY(-10%);
         }
+
         @media (max-aspect-ratio: 1/1.3) {
             .name {
                 font-size: 5vw;
                 height: 60%;
                 transform: translateY(-10%);
             }
+
             .ingamePosition {
                 font-size: 3.5vw;
             }
+
             .ingamePositionLegion {
                 margin: 0;
                 font-size: 1.4vw;
                 transform: translateY(-5%);
             }
-            .nameLegion{
-        font-size: 5vh;
-    }
+
+            .nameLegion {
+                font-size: 5vh;
+            }
         }
 
         @media (min-aspect-ratio: 567/349) {
@@ -60,53 +69,84 @@
                 height: 60%;
                 transform: translateY(-10%);
             }
+
             .ingamePosition {
                 font-size: 2.5vh;
             }
         }
     }
+
     .iconWrapper {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10%;
         /* background-color: rgba(0, 0, 0, 0.5); */
-        width: 100%;
-        height: 42%;
+        width: 62.5%;
+        height: 14%;
+
+
         .icon {
-            position: absolute;
-            top: 10.7%;
-            left: 41%;
-            width: 17%;
+            // position: absolute;
+            // top: 10.7%;
+            // left: 41%;
+            height: 70%;
             transition: transform 0.2s ease;
+
             &:hover {
                 transform: scale(1.1);
             }
         }
     }
+
     .imageContainer {
         display: flex;
         justify-content: space-between;
         align-items: center;
         height: 46%;
-        margin-left: 9%;
-        margin-right: 11.5%;
+        width: 100%;
+        // margin-left: 7%;
+        // margin-right: 9%;
+        padding-right: 3%;
+        padding-left: 1%;
+
         .imageWrapper {
-            width: 16%;
-            aspect-ratio: 1/1;
+            height: 40%;
+            width: 30%;
             display: flex;
             justify-content: center;
             align-items: center;
             transition: transform 0.2s ease;
+            overflow: visible;
 
             .imageLabel {
                 position: absolute;
                 stroke-width: 2px;
                 opacity: 0;
+                font-size: 1.3vw;
+
                 //     text-shadow:
                 //         1px 1px 0 #000,
                 //         -1px 1px 0 #000,
                 //         1px -1px 0 #000,
                 //         -1px -1px 0 #000;
+                @media (max-aspect-ratio: 1/1.3) {
+                    font-size: 5vw;
+
+                }
+
+                @media (min-aspect-ratio: 567/349) {
+                font-size: 2vh;
+
+                }
+
+
             }
+
             &:hover {
                 transform: scale(1.1);
+
                 .imageLabel {
                     opacity: 1;
                     text-align: center;
@@ -114,7 +154,6 @@
                     left: 50%;
                     top: 85%;
                     color: rgb(196, 234, 84);
-                    font-size: 1.3vw;
                     text-shadow: #000000 0px 0 6px;
 
                     transform: translateX(-50%);
@@ -130,9 +169,11 @@
         font-size: 5vw;
         height: 60%;
     }
+
     .ingamePosition {
         font-size: 3.5vw;
     }
+
     .nameLegion {
         font-size: 5vw;
     }
@@ -143,9 +184,11 @@
         font-size: 3.6vh;
         height: 60%;
     }
+
     .nameLegion {
         font-size: 5vh;
     }
+
     .ingamePosition {
         font-size: 2.5vh;
     }
